--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <li><a class="nav-link scrollto active" href="#">Trang Chủ</a></li>
           <li><a class="nav-link scrollto" href="#featured-services">News today</a></li>
           <li><a class="nav-link scrollto" href="#about">Giới Thiệu</a></li>
-          <li class="dropdown nav-link scrollto "><a class="nav-link scrollto" href="#portfolio"><samp>GIA PHẢ</samp> <i
+          <li class="dropdown nav-link scrollto "><a class="color-red nav-link scrollto" href="#portfolio">GIA PHẢ <i
                 class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a class="nav-link scrollto" href="#portfolio">Tổ Cô - Từ Đường</a></li>
@@ -295,11 +295,11 @@
             <font color="#ff0018">*</font> Họ Nguyễn Việt Nam
           </a>
 
-          <a class="newstoday-text" href="#">
+          <a class="newstoday-text nav-link scrollto" href="#portfolio">
             <font color="#ff0018">*</font> Lịch sử Dòng họ
           </a>
 
-          <a class="newstoday-text" href="#">
+          <a class="newstoday-text nav-link scrollto" href="#team">
             <font color="#ff0018">*</font> Người tốt việc tốt
           </a>
         </div>
@@ -359,20 +359,20 @@
 
               <div class="category-content">
                 <ul class="sbnav-list list-st-none">
-                  <li class="list-items"> <a href="#a" class="specific-items">
+                  <li class="list-items"> <a href="#a" class="specific-items nav-link scrollto">
                       <font color="#ffeb00" size="3px">* </font> Thủy Tổ họ Nguyễn Việt Nanm. Định Quốc
                       Công - Khai Quốc Công Thần: Nguyễn Bặc.
                     </a> </li>
-                  <li class="list-items"> <a href="#a" class="specific-items">
+                  <li class="list-items"> <a href="#a" class="specific-items nav-link scrollto">
                       <font color="#ffeb00" size="3px">* </font> 0979351075
                     </a> </li>
-                  <li class="list-items"> <a href="#a" class="specific-items">
+                  <li class="list-items"> <a href="#a" class="specific-items nav-link scrollto">
                       <font color="#ffeb00" size="3px">* </font> 0979351075
                     </a> </li>
-                  <li class="list-items"> <a href="#a" class="specific-items">
+                  <li class="list-items"> <a href="#a" class="specific-items nav-link scrollto">
                       <font color="#ffeb00" size="3px">* </font> 0979351075
                     </a> </li>
-                  <li class="list-items"> <a href="#a" class="specific-items">
+                  <li class="list-items"> <a href="#a" class="specific-items nav-link scrollto">
                       <font color="#ffeb00" size="3px">* </font> 0979351075
                     </a> </li>
                 </ul>
@@ -605,7 +605,7 @@
     <!-- --- End Newstoday --------------------------------------------------- -->
 
     <!-- ======= About Section ======= -->
-    <section id="about" class="about ftco-section">
+    <section id="about" class="about ftco-section" data-aos="fade-up" data-aos-delay="100">
 
       <div class="container">
         <div class="row">
@@ -616,12 +616,12 @@
             <p>Cuốn gia phả dòng họ Nguyễn nhánh Cụ Nghị <br> Lạng Phong, Nho Quan, Ninh Bình.</p>
           </div>
 
-          <div class="col-md-12">
+          <div class="col-md-12" data-aos="zoom-in" data-aos-delay="100">
             <div class="featured-carousel owl-carousel">
 
               <div class="item">
                 <div class="work-wrap d-md-flex" style="background: #fff3f171;">
-                  <div class="p-left20 col-6 col-xs-12 textalign-center">
+                  <div class="p-left20 p-left0-mb col-6 col-xs-12 textalign-center">
                     <div class="img order-md-last"
                       style="background-image: url(./assets/img/Gia-Dinh/hoa-hiep/Phao_Thu_Do-rem.png);"></div>
                   </div>
@@ -660,7 +660,7 @@
 
           <div class="item">
             <div class="work-wrap d-md-flex" style="background: rgba(235, 232, 200, 0.329); ">
-              <div class="p-left20 col-6 col-xs-12 textalign-center">
+              <div class="p-left20 p-left0-mb col-6 col-xs-12 textalign-center">
                 <div class="img order-md-last" style="background-image: url(./assets/images/work-2.jpg);"></div>
               </div>
 
@@ -697,7 +697,7 @@
 
       <div class="item">
         <div class="work-wrap d-md-flex" style="background-color: rgba(223, 175, 241, 0.164);">
-          <div class="p-left20 col-6 col-xs-12 textalign-center">
+          <div class="p-left20 p-left0-mb col-6 col-xs-12 textalign-center">
             <div class="img order-md-last" style="background-image: url(./assets/images/imagmovebg.png);">
             </div>
           </div>
@@ -733,7 +733,7 @@
 
       <div class="item">
         <div class="work-wrap d-md-flex" style="background-color: rgba(241, 205, 150, 0.171);">
-          <div class="p-left20 col-6 col-xs-12 textalign-center">
+          <div class="p-left20 p-left0-mb col-6 col-xs-12 textalign-center">
             <div class="img order-md-last"
               style="background-image: url(./assets/img/Gia-Dinh/ong-ngu/mot-dan-con-chau-remove.png);"></div>
           </div>
@@ -769,7 +769,7 @@
 
       <div class="item">
         <div class="work-wrap d-md-flex" style="background-color: rgba(101, 236, 189, 0.123);">
-          <div class="p-left20 col-6 col-xs-12 textalign-center">
+          <div class="p-left20 p-left0-mb col-6 col-xs-12 textalign-center">
             <div class="img order-md-last" style="background-image: url(./assets/images/Pha-ký-removebg-convert.png);">
             </div>
           </div>
@@ -806,7 +806,7 @@
 
       <div class="item">
         <div class="work-wrap d-md-flex" style="background-color: rgba(181, 189, 226, 0.219);">
-          <div class="p-left20 col-6 col-xs-12 textalign-center">
+          <div class="p-left20 p-left0-mb col-6 col-xs-12 textalign-center">
             <div class="img order-md-last"
               style="background-image: url(./assets/img/Gia-Dinh/anh-trinh/dam-cuoi-ch.png);"></div>
           </div>
@@ -830,8 +830,8 @@
               </div>
             </div>
             <p class="btn-gt-bt">
-              <button type="button" class="btn btn-outline-darks mb-2"> <a class="nav-link scrollto"
-                  href="#portfolio">Tìm hiểu ngay </a></button>
+              <button type="button" class="btn btn-outline-darks mb-2"> <a class="nav-link scrollto" href="#faq">Tìm
+                  hiểu ngay </a></button>
               <button type="button" class="btn btn-darks mb-2"> <a href="#"> Đầu trang</a></button>
             </p>
           </div>
@@ -842,7 +842,7 @@
 
       <div class="item">
         <div class="work-wrap d-md-flex" style="background-color: #3a08081f;">
-          <div class="p-left20 col-6 col-xs-12 textalign-center">
+          <div class="p-left20 p-left0-mb col-6 col-xs-12 textalign-center">
             <div class="img order-md-last" style="background-image: url(./assets/images/lang_Logo.jpg);"></div>
           </div>
           <div class="col-lg-6 pt-lg-0 content d-flex flex-column justify-content-center">
@@ -1037,15 +1037,15 @@
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/hoa-hiep/sinh-nhat-Misa.png" data-gallery="portfolioGallery"
-              class="portfolio-lightboxs preview-link" title="Sinh nhật đầu tiên của MySa"> <img
+              class="portfolio-lightboxs preview-link " title="Sinh nhật đầu tiên của MySa"> <img
                 src="assets/img/clients/sinh-nha-Mysa1.png" class="img-fluid" alt="">
             </a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/hoa-hiep/Misa.png" data-gallery="portfolioGallery"
-              class="portfolio-lightboxs preview-link" title="Mysa Cute"> <img src="assets/img/clients/Mysa-cute1.png"
-                class="img-fluid" alt="">
+              class="portfolio-lightboxs preview-link" title="TẾT ĐẦU TIÊN CỦA Mysa Cute"> <img
+                src="assets/img/clients/Mysa-cute1.png" class="img-fluid" alt="">
             </a>
           </div>
 
@@ -1072,36 +1072,36 @@
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/ong-ngu/123.png" data-gallery="portfolioGallery"
-              class="portfolio-lightboxs preview-link" title="Mộ Bà TỔ CÔ tại Vân Cú Nam Định"> <img
+              class="portfolio-lightboxs preview-link" title="TUỔI THƠ DỮ DỘI"> <img
                 src="assets/img/clients/Tuoi-tho-giu-doi1.png" class="img-fluid" alt="">
             </a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/hoa-hiep/tam-biet-tho-trang.png" data-gallery="portfolioGallery"
-              class="portfolio-lightboxs preview-link" title="Mộ Bà TỔ CÔ tại Vân Cú Nam Định"> <img
+              class="portfolio-lightboxs preview-link" title="TẠM BIỆT THỎ TRẮNG"> <img
                 src="assets/img/clients/Tam-biet-tho-trang1.png" class="img-fluid" alt="">
             </a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/anh-trinh/trung-nien-no.jpg" data-gallery="portfolioGallery"
-              class="portfolio-lightboxs preview-link" title="Mộ Bà TỔ CÔ tại Vân Cú Nam Định"> <img
+              class="portfolio-lightboxs preview-link" title="CHÁU NGOẠI ANH TRỊNH"> <img
                 src="assets/img/clients/trung-nien1.png" class="img-fluid" alt="">
             </a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/nhatho-toco/Nha-tho-To-co.png" data-gallery="portfolioGallery"
-              class="portfolio-lightboxs preview-link" title="Mộ Bà TỔ CÔ tại Vân Cú Nam Định"> <img
+              class="portfolio-lightboxs preview-link" title="NHÀ THỜ Bà TỔ CÔ tại Vân Cú Nam Định"> <img
                 src="assets/img/clients/Mysa-bai-to1.png" class="img-fluid" alt="">
             </a>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="assets/img/Gia-Dinh/hoa-hiep/ra-thudo-giai-ngo.png" data-gallery="portfolioGallery"
-              class="portfolio-lightboxs preview-link" title="App 2"> <img src="assets/img/clients/Di-giai-ngo1.png"
-                class="img-fluid" alt="">
+              class="portfolio-lightboxs preview-link" title="RA THỦ ĐÔ GIẢI NGỐ"> <img
+                src="assets/img/clients/Di-giai-ngo1.png" class="img-fluid" alt="">
             </a>
           </div>
 
@@ -1111,33 +1111,34 @@
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
 
-        <div class="section-title">
+        <div class="section-title" data-aos="fade-up" data-aos-delay="100">
           <h1>
             GIA PHẢ
           </h1>
           <h3>Họ Nguyễn <span>CỤ NGHỊ</span><br> Lạng Phong, Nho Quan, Ninh Bình.</h3>
         </div>
 
-        <div class="row" data-aos="zoom-in" data-aos-delay="100">
+        <div class="row" data-aos="zoom-in" data-aos-delay="200">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">
-                <p>All</p> <img src="assets/img/clients/Mysa-bai-to1.png" class="img-fluid" alt="">
+                <p>All</p> <img src="assets/img/clients/Mysa-bai-to1.png" class="img-fluid dpl-none768" alt="">
               </li>
               <li data-filter=".filter-card">
-                <p>TỪ ĐƯỜNG</p> <img src="assets/img/clients/Nha-Tho-To-Co1.png" class="img-fluid" alt="">
+                <p>TỪ ĐƯỜNG</p> <img src="assets/img/clients/Nha-Tho-To-Co1.png" class="img-fluid dpl-none768" alt="">
               </li>
               <li data-filter=".filter-app">
-                <p>CỤ NGHỊ</p> <img src="assets/img/clients/Lang-mo1.png" class="img-fluid" alt="">
+                <p>CỤ NGHỊ</p> <img src="assets/img/clients/Lang-mo1.png" class="img-fluid dpl-none768" alt="">
               </li>
               <li data-filter=".filter-web">
-                <p>NHÁNH ÔNG LÝ</p> <img src="assets/img/clients/Tet-la-Tet1.png" class="img-fluid" alt="">
+                <p>NHÁNH ÔNG LÝ</p> <img src="assets/img/clients/Tet-la-Tet1.png" class="img-fluid dpl-none768" alt="">
               </li>
 
               <li data-filter=".filter-ok">
-                <p>NHÁNH ÔNG CỬU</p> <img src="assets/img/clients/Tuoi-tho-giu-doi1.png" class="img-fluid" alt="">
+                <p>NHÁNH ÔNG CỬU</p> <img src="assets/img/clients/Tuoi-tho-giu-doi1.png" class="img-fluid dpl-none768"
+                  alt="">
               </li>
             </ul>
           </div>
@@ -1345,9 +1346,8 @@
           <h3>Họ Nguyễn <span>CỤ NGHỊ</span></h3>
 
           <p> Lạng Phong, Nho Quan, Ninh Bình. <br>
-            Hương ước Dòng Họ là <font color="#ff0018">BỘ QUY TẮC</font> sinh hoạt, quan hệ, ứng xử giữa thành viên, gia
-            đình cùng trong Họ cũng
-            như ngoài xã hội.</p>
+            Hương ước Dòng Họ là <font color="#ff0018">BỘ QUY TẮC</font> sinh hoạt, quan hệ, ứng xử giữa các thành viên,
+            các gia đình cùng trong dòng Họ cũng như ngoài xã hội.</p>
 
         </div>
 
@@ -1368,8 +1368,10 @@
               <li>
                 <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">Gia Phả đang trong quá trình xây
                   dựng và hoàn thiện. Hương Ước dòng Họ đang được soạn thảo và lấy ý kiến các bậc cây cao bóng cả trong
-                  Họ... Ban biên tập sẽ sớm hoàn thành việc lấy ý kiến... chính sửa và cập nhật tới toàn thể Họ Mạc<i
-                    class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+                  Họ... Ban biên tập sẽ sớm hoàn thành việc lấy ý kiến... chính sửa và cập nhật tới toàn thể Họ Mạc
+                  <span> <u>(Đọc thêm)</u> </span><i class="bi bi-chevron-down icon-show"></i><i
+                    class="bi bi-chevron-up icon-close"></i>
+                </div>
                 <div id="faq2" class="collapse" data-bs-parent=".faq-list">
                   <p>
                     Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id
@@ -1381,8 +1383,8 @@
 
               <li>
                 <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">Dolor sit amet consectetur
-                  adipiscing elit pellentesque habitant morbi? <i class="bi bi-chevron-down icon-show"></i><i
-                    class="bi bi-chevron-up icon-close"></i></div>
+                  adipiscing elit pellenteshabitant morbi? <span> <u>(Đọc thêm)</u> </span><i
+                    class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
                 <div id="faq3" class="collapse" data-bs-parent=".faq-list">
                   <p>
                     Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar
@@ -1395,8 +1397,8 @@
 
               <li>
                 <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">Ac odio tempor orci dapibus.
-                  Aliquam eleifend mi in nulla? <i class="bi bi-chevron-down icon-show"></i><i
-                    class="bi bi-chevron-up icon-close"></i></div>
+                  Aliquam eled mi in nulla? <span> <u>(Đọc thêm)</u> </span> <i
+                    class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
                 <div id="faq4" class="collapse" data-bs-parent=".faq-list">
                   <p>
                     Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id
@@ -1408,8 +1410,8 @@
 
               <li>
                 <div data-bs-toggle="collapse" href="#faq5" class="collapsed question">Tempus quam pellentesque nec nam
-                  aliquam sem et tortor consequat? <i class="bi bi-chevron-down icon-show"></i><i
-                    class="bi bi-chevron-up icon-close"></i></div>
+                  aliquam sem ettor consequat? <span> <u>(Đọc thêm)</u> </span> <i
+                    class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
                 <div id="faq5" class="collapse" data-bs-parent=".faq-list">
                   <p>
                     Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in.
@@ -1422,8 +1424,9 @@
 
               <li>
                 <div data-bs-toggle="collapse" href="#faq6" class="collapsed question">Tortor vitae purus faucibus
-                  ornare. Varius vel pharetra vel turpis nunc eget lorem dolor? <i
-                    class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+                  ornare. Varius vel pharetra vel turpisc eget lorem dolor? <span> <u>(Đọc thêm)</u> </span>
+                  <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i>
+                </div>
                 <div id="faq6" class="collapse" data-bs-parent=".faq-list">
                   <p>
                     Laoreet sit amet cursus sit amet dictum sitsus sit amet dictum sit amet justo. Mauris vi amet justo.
@@ -1608,7 +1611,7 @@
                 <li class="na">Massa ultricies mi</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy nav-link scrollto">Buy Now</a>
               </div>
             </div>
           </div>
@@ -1625,7 +1628,7 @@
                 <li class="na">Massa ultricies mi</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy nav-link scrollto">Buy Now</a>
               </div>
             </div>
           </div>
@@ -1642,7 +1645,7 @@
                 <li>Massa ultricies mi</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy nav-link scrollto">Buy Now</a>
               </div>
             </div>
           </div>
@@ -1660,7 +1663,7 @@
                 <li>Massa ultricies mi</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy nav-link scrollto">Buy Now</a>
               </div>
             </div>
           </div>
