--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope d-flex align-items-center ovh"><a href="mailto:nguyenthanhhoa51075@gmail.com"
             target="_blank">nguyenthanhhoa51075@gmail.com</a></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+84 979351075</span></i>
+        <i class="bi bi-phone d-flex align-items-center ms-4"><a href="tel://0979351075">call me</a></i>
       </div>
       <!-- 
       <div class="social-links d-none d-md-flex align-items-center">
